tests/typechecker/should_pass/non_ambiguous_channel.csp
module M(A)
exports
(X, Y) = A
channel c : X
endmodule

instance N = M(({0}, {}))
