tests/typechecker/should_fail/duplicate_modules3.csp
module M(x)
exports
channel c
endmodule

instance M = M(0)
